FiltroDigital.cydsn/REBUILD.log
--------------- Rebuild Started: 09/30/2018 19:20:43 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:167:40: error: expected expression before ',' token
     CyDmaTdSetConfiguration(DMA_TD[0], , CY_DMA_DISABLE_TD, CY_DMA_TD_INC_SRC_ADR);
                                        ^
In file included from Generated_Source\PSoC5/cyfitter_cfg.h:20:0,
                 from Generated_Source\PSoC5/project.h:17,
                 from main.c:12:
Generated_Source\PSoC5/cytypes.h:1376:46: error: expected expression before ')' token
 #define LO16(x)                 ((uint16) ((x) & 0xFFFFu))
                                              ^
main.c:168:34: note: in expansion of macro 'LO16'
     CyDmaTdSetAddress(DMA_TD[0], LO16((uint32)), LO16((uint32)DAC_Data_PTR));
                                  ^
main.c:176:5: warning: implicit declaration of function 'ISR_Data_StartEX' [-Wimplicit-function-declaration]
     ISR_Data_StartEX(Int_dato);
     ^
main.c:176:22: error: 'Int_dato' undeclared (first use in this function)
     ISR_Data_StartEX(Int_dato);
                      ^
main.c:176:22: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 09/30/2018 19:20:44 ---------------
